--- a/ram.html
+++ b/ram.html
@@ -25,19 +25,13 @@
                             Flights
                         </div>
                     </a>
-                    <a class="elementm" href="#Train">
-                        <div class="nav-item-txt">
-                            <i class="fa-solid fa-train"></i>
-                            Train
-                        </div>
-                    </a>
-                    <a class="elementm" href="#Emergency">
+                    <a class="elementm" href="#Offers">
                         <div class="nav-item-txt">
                             <i class="fa-solid fa-phone-volume"></i>
                             Emergency
                         </div>
                     </a>
-                    <a class="elementm" href="#Help">
+                    <a class="elementm" href="#Resell">
                         <div class="nav-item-txt">
                             <i class="fa-solid fa-handshake-angle"></i>
                             Help
@@ -48,13 +42,13 @@
 
             <div class="right-wrap">
                 <div class=" nav-list">
-                    <a class="elementm" href="#Customer Service">
+                    <a class="elementm" href="#Contact">
                         <div class="nav-item-txt">
                             <i class="fa-solid fa-phone-volume"></i>
                             Customer Service
                         </div>
                     </a>
-                    <a class="elementm" href="#Login/SignUp">
+                    <a class="elementm" href="#hacker.html">
                         <div class="nav-item-txt">
                             <i class="fa-solid fa-user-plus"></i>
                             Login/Signup
