--- a/ram.html
+++ b/ram.html
@@ -28,13 +28,13 @@
                     <a class="elementm" href="#Offers">
                         <div class="nav-item-txt">
                             <i class="fa-solid fa-phone-volume"></i>
-                            Emergency
+                            Offer
                         </div>
                     </a>
                     <a class="elementm" href="#Resell">
                         <div class="nav-item-txt">
                             <i class="fa-solid fa-handshake-angle"></i>
-                            Help
+                            Resell
                         </div>
                     </a>
                 </div>
