--- a/ram.html
+++ b/ram.html
@@ -25,10 +25,10 @@
                             Flights
                         </div>
                     </a>
-                    <a class="elementm" href="#Offers">
+                    <a class="elementm" href="#Offer">
                         <div class="nav-item-txt">
                             <i class="fa-solid fa-phone-volume"></i>
-                            Offer
+                            Offers
                         </div>
                     </a>
                     <a class="elementm" href="#Resell">
