--- a/ram.html
+++ b/ram.html
@@ -19,19 +19,19 @@
                     <div class="logo"></div>
                 </div>
                 <div class="nav-list">
-                    <a class="elementm" href="#Flight">
+                    <a class="elementm" href="Flight">
                         <div class="nav-item-txt1">
                             <i class="fa-solid fa-plane-up"></i>
                             Flights
                         </div>
                     </a>
-                    <a class="elementm" href="#Offer">
+                    <a class="elementm" href="Offer">
                         <div class="nav-item-txt">
                             <i class="fa-solid fa-phone-volume"></i>
                             Offers
                         </div>
                     </a>
-                    <a class="elementm" href="#Resell">
+                    <a class="elementm" href="Resell">
                         <div class="nav-item-txt">
                             <i class="fa-solid fa-handshake-angle"></i>
                             Resell
@@ -42,13 +42,13 @@
 
             <div class="right-wrap">
                 <div class=" nav-list">
-                    <a class="elementm" href="#Contact">
+                    <a class="elementm" href="Contact">
                         <div class="nav-item-txt">
                             <i class="fa-solid fa-phone-volume"></i>
                             Customer Service
                         </div>
                     </a>
-                    <a class="elementm" href="#hacker.html">
+                    <a class="elementm" href="hacker.html">
                         <div class="nav-item-txt">
                             <i class="fa-solid fa-user-plus"></i>
                             Login/Signup
